# IC2-Nuclear-Reactor-Optimizer

./: .gitignore  README.md  environment.yml  eslint.config.mjs  index.html  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  vite.config.ts
app/: globals.css  page.tsx
artifacts/: algorithm_scaling_audit.md  cut_compilation_audit.json  general_algorithm_completion_audit.md  global_benders_30s_4cpu.json  global_benders_60s_4cpu.json  global_benders_compact_flow_30s_4cpu.json  global_benders_failure_audit_15s.json  global_benders_ordered_flow_30s_4cpu.json  global_benders_ordered_flow_30s_v2.json  global_benders_smoke.json  math_smoke_report.json  proof_380_cross_results.json  proof_380_star_results.json  proof_unit_benchmark.json
backend/: __init__.py
docs/: GENERAL_MATHEMATICAL_OPTIMIZER.md  GPU_BACKEND_DESIGN.md  GPU_FULL_SIMULATION.md  MARK_I_MATHEMATICAL_ANALYSIS.md  MARK_I_OPTIMIZATION_PROOFS.tex  MINIMUM_COMPUTE_EXACT_ALGORITHM.md  OPTIMIZATION_MODEL_25_RODS.md  RULES.md  UNIVERSAL_OPTIMIZATION_MODEL.md
examples/: cut_compilation_capacity_25_rods.json  global_benders_25_rods_unlimited.json  math_25_rods_unlimited.json
scripts/: audit_cut_compilation.py  average_heat_cp_sat.py  average_heat_milp.py  benchmark_cpu_scheduling.py  benchmark_gpu.py  benchmark_gpu_exhaustive.py  benchmark_proof_units.py  control_paused_job.py  direct_cooling_cp_sat.py  exact_direct_cooling_cp_sat.py  extract_ic2_textures.py  global_cooling_bound_cp_sat.py  prove_380_cross_branches.py  prove_380_min_heat_branches.py  prove_480_impossible.py  (+6 more)
(+122 files in other folders)
